css/qiancapital.webflow.css
/* ... */
body {
  background-color: var(--light-tone);
  color: var(--dark-tone);
  font-family: BDO Grotesk, Arial, sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5em;
}

h1 {
  letter-spacing: -.02em;
  margin-top: 0;
  margin-bottom: 0;
  font-size: 64px;
  font-weight: 400;
  line-height: 1.15em;
}

h2 {
  letter-spacing: -.02em;
  margin-top: 0;
  margin-bottom: 0;
  font-size: 51px;
  font-weight: 400;
  line-height: 1.2em;
}

h3 {
  letter-spacing: -.02em;
  margin-top: 0;
  margin-bottom: 0;
  font-size: 40px;
  font-weight: 400;
  line-height: 1.2em;
}

h4 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 25px;
  font-weight: 400;
  line-height: 1.4em;
}

h5, h6 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 1em;
  font-weight: 500;
  line-height: 1.5em;
}

p {
  margin-bottom: 10px;
}

a {
  color: var(--dark-tone);
  font-variation-settings: "wght" 475;
  font-weight: 600;
  text-decoration: none;
}

ul {
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 1.5em;
}

ol {
  margin-top: 0;
  margin-bottom: 10px;
  padding-left: 40px;
}

img {
  max-width: 100%;
  height: auto;
  display: inline-block;
}

label {
  margin-bottom: 12px;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.4em;
  display: block;
}

strong {
  font-weight: bold;
}

blockquote {
  border-left: 5px solid #e2e2e2;
  margin-bottom: 10px;
  padding: 10px 20px;
  font-size: 18px;
  line-height: 22px;
}

figcaption {
  text-align: center;
  margin-top: 5px;
  font-size: 13px;
}

.section {
  border-bottom: 0px none var(--gold);
  color: var(--dark-tone);
  padding-top: 24px;
  padding-bottom: 96px;
}

.section.title {
  border-bottom: 1px solid var(--green);
  color: var(--light-tone);
  border-radius: 0;
  min-height: 0;
  padding-top: 180px;
  padding-bottom: 60px;
}

.section.title.bg-dark-tone {
  border-bottom-color: var(--gold);
}

.section.title.increased-top-padding {
  padding-top: 192px;
}

.section.no-padding {
  padding-top: 0;
  padding-bottom: 0;
}

.section.bg-dark-tone {
  background-color: var(--dark-tone);
  color: var(--light-tone);
}

.section.bg-dark-tone.border-top-white {
  border-top: 1px solid var(--gold);
}

.section.bg-dark-tone.border-top-dark {
  border-top: 1px solid var(--dark-tone);
}

.section.bg-dark-tone.icon-features, .section.bg-dark-tone.large-quote-section {
  padding-top: 48px;
}

.section.bg-dark-tone.metrics-section {
  border-top: 1px solid #c0aa81;
  border-bottom-color: var(--gold);
  padding-top: 48px;
}

.section.small-title {
  padding-top: 24px;
  padding-bottom: 24px;
}

.section.reduced-top-padding {
  padding-top: 48px;
  padding-bottom: 192px;
}

.section.hero-4 {
  background-color: var(--dark-tone);
  color: var(--light-tone);
  flex-flow: column;
  justify-content: space-between;
  height: auto;
  min-height: 820px;
  /*padding-top: 48px;*/
  padding-top: 0;
  padding-bottom: 0;
  display: flex;
}

.section.process-step {
  border-bottom: 1px solid var(--green);
  padding-top: 24px;
}

.section.no-top-padding {
  padding-top: 0;
}

.section.no-top-padding.increased-bottom-padding {
  margin-bottom: 0;
  padding-bottom: 0;
}

.section.comparison-table-section {
  border-top: 1px solid var(--gold);
  background-color: var(--dark-tone);
  color: var(--light-tone-text);
  padding-top: 0;
}

.section.team-intro-title {
  border-top: 1px solid var(--gold);
  border-bottom-style: solid;
  border-bottom-color: var(--gold);
  background-color: var(--dark-tone);
  color: var(--light-tone);
  padding-top: 24px;
  padding-bottom: 24px;
}

.section.team-section {
  background-color: var(--dark-tone);
}

.section.careers-title {
  height: 900px;
  padding-top: 0;
  padding-bottom: 0;
}

.section.blog-listing-section {
  flex-flow: column;
  padding-top: 24px;
  padding-bottom: 192px;
  display: flex;
}

.section.categories-list {
  padding-top: 24px;
  padding-bottom: 72px;
}

.section.categories-list.no-bottom-border {
  border-bottom-style: none;
}

.section.blog-3-listing-section {
  padding-top: 24px;
  padding-bottom: 192px;
}

.section.blog-2-listing-section {
  padding-top: 0;
  padding-bottom: 192px;
}

.section.blog-title-section {
  padding-top: 192px;
  padding-bottom: 48px;
}

.section.article-section {
  padding-bottom: 192px;
}

.section.no-border {
  border-bottom-style: none;
}

.section.my-account-section {
  padding-top: 72px;
  padding-bottom: 192px;
}

.section.hero-5 {
  flex-flow: column;
  justify-content: space-between;
  height: 800px;
  padding-top: 48px;
  padding-bottom: 0;
  display: flex;
}

.section.product-pages-section {
  padding-top: 72px;
  padding-bottom: 144px;
}

.section.checkout-page {
  padding-top: 72px;
}

.section.pricing-section {
  background-color: var(--mid-tone);
  padding-top: 48px;
  padding-bottom: 72px;
}

.section.product-article-section {
  padding-top: 72px;
  padding-bottom: 192px;
}

.section.utility-section, .section.career-section, .section.search-section {
  padding-top: 72px;
}

.container---main {
  opacity: 1;
  color: var(--dark-tone);
  -webkit-text-stroke-color: var(--dark-tone);
  background-color: rgba(0, 0, 0, 0);
  width: 100%;
  max-width: 1512px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 24px;
  padding-right: 24px;
  display: block;
  position: relative;
}

.container---main.process-hero-container {
  flex: 1;
  display: flex;
}

.container---main.careers-title-container {
  height: 100%;
}

.style-guide {
  grid-row-gap: 112px;
  grid-template-rows: auto;
  grid-template-columns: 1fr;
}

.template-utility-section {
  grid-column-gap: 72px;
  grid-row-gap: 72px;
  grid-template-rows: auto;
  grid-template-columns: .33fr 1fr;
}

.style-guide-colors {
  grid-column-gap: 24px;
  grid-row-gap: 24px;
  flex-direction: column;
  grid-template-rows: auto;
  grid-template-columns: 1fr;
  display: flex;
}
/* ... */

